# fractal-playground

./: .gitignore  CMakeLists.txt  README.md  run.sh
includes/: UI.h  complex-view.h  complexView.h  data.h  enum.h  fractal-playground.h  functions.h  ui.h  utils.h
src/: ComplexView.cpp  complexView.cpp  main.cpp  utils.cpp
src/UI/: MaterialButton.cpp  MaterialSelect.cpp  MaterialSelector.cpp  UI.cpp  ViewBuilder.cpp
src/functions/: burningShips.cpp  burning_ships.cpp  julia.cpp  mandlebar.cpp  mandlebrot.cpp
src/ui/: materialBox.cpp  materialButton.cpp  materialSelector.cpp  row.cpp  ui.cpp  viewBuilder.cpp
